--- a/content/pages/404.md
+++ b/content/pages/404.md
@@ -2,4 +2,6 @@ Title: Not Found
 Status: hidden
 Save_as: 404.html
 
-Page Not found! [Click](https://komeilparseh.github.io) on me to go to the main page
+404 Page Not found!
+
+[Click](https://komeilparseh.github.io) on me to go to the main page
