--- a/content/pages/404.md
+++ b/content/pages/404.md
@@ -1,7 +1,7 @@
-Title: Not Found
+Title: 404 page Not Found
 Status: hidden
 Save_as: 404.html
 
-404 Page Not found!
-
+<div align="center"
 [Click](https://komeilparseh.github.io) on me to go to the main page
+</div>
