--- a/content/pages/404.md
+++ b/content/pages/404.md
@@ -2,6 +2,6 @@ Title: 404 page Not Found
 Status: hidden
 Save_as: 404.html
 
-<div align="center"
+<center>
 [Click](https://komeilparseh.github.io) on me to go to the main page
-</div>
+</center>
